fix contrast text

--- a/styles/base.css
+++ b/styles/base.css
@@ -95,7 +95,7 @@ h3{
 
 .card h2 {
     background-color:rgb(43, 121, 177);
-    color: black;
+    color: #FFFFFF;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 15px;
